unpackaged/main/default/objects/SDO_Platform_Events_Button__c/SDO_Platform_Events_Button__c.object-meta.xml
<CustomObject>
    <description>What: Platform Events Button object.</description>
    <label>Platform Events Button</label>
    <nameField>
        <label>Platform Event Button Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Events Buttons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>