unpackaged/main/default/objects/SDO_Platform_Events_Button__c/fields/Action_Data__c.field-meta.xml
<CustomField>
    <fullName>Action_Data__c</fullName>
    <label>Action Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>