unpackaged/main/default/objects/SDO_Platform_Events_Button__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>