unpackaged/main/default/objects/SDO_Platform_Events_Button__c/fields/Platform_Events_Page__c.field-meta.xml
<CustomField>
    <fullName>Platform_Events_Page__c</fullName>
    <label>Platform Events Page</label>
    <referenceTo>SDO_Platform_Events_Page__c</referenceTo>
    <relationshipLabel>Platform Events Buttons</relationshipLabel>
    <relationshipName>Platform_Event_Buttons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>